Version 6.0.0
- Fixed _ assignment in nucode output
- Fixed calculation of FVAR/FVARS when labels are unknown
- Fixed a problem with unnamed parameters not being counted in code generation
- Fixed _getus() and _getms() in -2nu
- Made Spin2 loop behaviour match that of other languages (like PNut v38)
- Optimized nucode
- Some internal cleanups in the code generators

Version 5.9.28
- Added some simple loop optimizations to transform loops into DJNZ form at level -O1
- Fixed incorrect code generated sometimes for fetching the upper 32 bits of a 64 bit function result.
- Fixed REV operator in nucode output
- Improved performance of nucode generated code
- Optimized P1 multiply code (thanks to Ada for this)

Version 5.9.27
- Added some more missing functions from libc
- Added some additional asm optimizations thanks to Ada
- Fixed an out of memory crash due to nested structs in -O0
- Fixed assembly warnings that were accidentally broken
- Made more fatfs options settable on the command line (thanks, Ada)
- Made P2 signed multiply always generate inline code
- Optimized the 9p filesystem code somewhat

Version 5.9.26
- Added __FLEX_MAJOR__, __FLEX_MINOR__, and __FLEX_REV__ macros
- Added __asm__ alias for __asm in C
- Fixed a bug when __builtin_clz was applied to memory
- Improved performance of symbol resolution in sub-modules (some complicated code was so slow it seemed to hang)

Version 5.9.25
- Added __P1__ macro defined only for P1 compiles
- Added UMOUNT command for BASIC
- Added an `inline` attribute to encourage functions to be inlined
- Added _cogstart_cog and related defines to propeller2.h
- Added a new file libc.spin2 to make calling the C library easier from Spin2
- Fixed ALIGNL in Spin2 VAR blocks
- Improved some error messages
- Made heap corruption code check depend on -g flag
- Made sure variables are properly aligned in Spin2 for P1
- Tweaked file names in zip files to be compatible with more unzippers

Version 5.9.24